--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
 
 	<title>APooja</title>
-	<link rel="stylesheet" href="../assests/css/styles.css" />
+	<link rel="stylesheet" href="../assets/css/styles.css" />
 </head>
 
 <body>
@@ -160,7 +160,7 @@
 			<div class="about container">
 				<div class="about_desc">
 					<div class="img_outer">
-						<img src="assests/images and videos/Pooja.png" alt="" />
+						<img src="assets/images/Pooja.png" alt="" />
 					</div>
 
 
@@ -191,7 +191,7 @@
 							<span class="underline-gradient">I'm Pooja, your pixel weaver, ready to paint your digital
 								story. Let's create!</span>
 						</p>
-						<a href="assests/documents/resume.pdf" target="_blank" class="resume_link">Download my
+						<a href="assets/documents/resume.pdf" target="_blank" class="resume_link">Download my
 							Resume</a>
 					</div>
 
@@ -314,7 +314,25 @@
 				</div>
 				<div class="project_cards">
 					<div class="cards">
-						<img class="project_img" src="assests/images and videos/project3.png" alt="project1" />
+						<img class="project_img" src="assets/images/project1.png" alt="project1" />
+						<div class="project_details">
+							<h2 class="project_name">Leafy Eden</h2>
+							<h4 class="project_tech">HTML, CSS, Javascript</h4>
+							<p class="project_about">Leafy Eden is a user-friendly online plant store landing page. The
+								landing page
+								prioritizes a simple and easy-to-navigate interface for customers browsing their
+								selection
+								of plants. It caters to user preference by offering both light and dark theme
+								options, and ensures a smooth experience on any device by being responsive.</p>
+							<div class="project_links">
+								<a href="https://apooja.dev/plant-store-website/" class="project_link">Visit Demo</a>
+								<a href="https://github.com/apooja21/plant-store-website" class="source_link">Source
+									Code</a>
+							</div>
+						</div>
+					</div>
+					<div class="cards">
+						<img class="project_img" src="assets/images/project3.png" alt="project1" />
 						<div class="project_details">
 							<h2 class="project_name">Workout Buddy</h2>
 							<h4 class="project_tech">Client: React, useContext, TailwindCSS
@@ -329,32 +347,15 @@
 								like workout name, loads, repetitions and target area.
 							</p>
 							<div class="project_links">
-								<a href="https://github.com/apooja21/workout-buddy-jwt-authentication.git"
+								<a href="https://github.com/apooja21/workout-buddy-jwt-authentication"
 									class="source_link">Source Code</a>
 							</div>
 
 						</div>
 					</div>
+
 					<div class="cards">
-						<img class="project_img" src="assests/images and videos/project1.png" alt="project1" />
-						<div class="project_details">
-							<h2 class="project_name">Leafy Eden</h2>
-							<h4 class="project_tech">HTML, CSS, Javascript</h4>
-							<p class="project_about">Leafy Eden is a user-friendly online plant store landing page. The
-								landing page
-								prioritizes a simple and easy-to-navigate interface for customers browsing their
-								selection
-								of plants. It caters to user preference by offering both light and dark theme
-								options, and ensures a smooth experience on any device by being responsive.</p>
-							<div class="project_links">
-								<a href="https://apooja.dev/plant-store-website/" class="project_link">Visit Demo</a>
-								<a href="https://github.com/apooja21/plant-store-website.git" class="source_link">Source
-									Code</a>
-							</div>
-						</div>
-					</div>
-					<div class="cards">
-						<img class="project_img" src="assests/images and videos/project2.png" alt="project2" />
+						<img class="project_img" src="assets/images/project2.png" alt="project2" />
 						<div class="project_details">
 							<h2 class="project_name">ToDo App</h2>
 							<h4 class="project_tech">React, Javascript, CSS</h4>
@@ -364,7 +365,7 @@
 								interface for adding new tasks and displaying the existing ones.</p>
 							<div class="project_links">
 								<a href="https://apooja.dev/todo-list-app/" class="project_link">Visit Demo</a>
-								<a href="https://github.com/apooja21/todo-list-app.git" class="source_link">Source
+								<a href="https://github.com/apooja21/todo-list-app" class="source_link">Source
 									Code</a>
 							</div>
 						</div>
@@ -415,7 +416,7 @@
 	<div class="gradient-container"></div>
 
 	<!-- ===================JS Script===================== -->
-	<script src="assests/scripts/script.js"></script>
+	<script src="assets/scripts/script.js"></script>
 </body>
 
 </html>
