--- a/index.html
+++ b/index.html
@@ -131,8 +131,7 @@
 				<div class="name">
 					<div class="my_name">
 						<h1>
-							Pooja <br />
-							Agarwal
+							Pooja Agarwal
 						</h1>
 					</div>
 					<div class="title">
