--- a/index.html
+++ b/index.html
@@ -324,8 +324,10 @@
 								of plants. It caters to user preference by offering both light and dark theme
 								options, and ensures a smooth experience on any device by being responsive.</p>
 							<div class="project_links">
-								<a href="https://apooja.dev/plant-store-website/" class="project_link">Visit Demo</a>
-								<a href="https://github.com/apooja21/plant-store-website" class="source_link">Source
+								<a href="https://apooja.dev/plant-store-website/" target="_blank"
+									class="project_link">Visit Demo</a>
+								<a href="https://github.com/apooja21/plant-store-website" target="_blank"
+									class="source_link">Source
 									Code</a>
 							</div>
 						</div>
@@ -347,7 +349,7 @@
 							</p>
 							<div class="project_links">
 								<a href="https://github.com/apooja21/workout-buddy-jwt-authentication"
-									class="source_link">Source Code</a>
+									class="source_link" target="_blank">Source Code</a>
 							</div>
 
 						</div>
@@ -363,8 +365,10 @@
 								user-friendly
 								interface for adding new tasks and displaying the existing ones.</p>
 							<div class="project_links">
-								<a href="https://apooja.dev/todo-list-app/" class="project_link">Visit Demo</a>
-								<a href="https://github.com/apooja21/todo-list-app" class="source_link">Source
+								<a href="https://apooja.dev/todo-list-app/" target="_blank" class="project_link">Visit
+									Demo</a>
+								<a href="https://github.com/apooja21/todo-list-app" target="_blank"
+									class="source_link">Source
 									Code</a>
 							</div>
 						</div>
