--- a/index.html
+++ b/index.html
@@ -333,7 +333,12 @@
 						</div>
 					</div>
 					<div class="cards">
-						<img class="project_img" src="assets/images/project3.png" alt="project1" />
+						<span class="project_img"  alt="project1" style="background: url(&quot;assets/images/project3.png&quot;);
+	background-size: 600px;
+	background-repeat: no-repeat;
+	background-color: #fff;
+	background-position: 0px 22px;
+	width: 440px;"></span>
 						<div class="project_details">
 							<h2 class="project_name">Workout Buddy</h2>
 							<h4 class="project_tech">Client: React, useContext, TailwindCSS
