--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 	</main>
 	<!-- <footer></footer> -->
 
-	<div class="gradient-container"></div>
+	<!-- <div class="gradient-container"></div> -->
 
 	<!-- ===================JS Script===================== -->
 	<script src="assets/scripts/script.js"></script>
