--- a/index.html
+++ b/index.html
@@ -282,12 +282,6 @@
 						<div class="outer">
 							<div class="card">
 								<div class="info">
-									<h4 class="title">Career Break- Due to Family Member Caregiving</h4>
-									<p>April 2022 - Present</p>
-								</div>
-							</div>
-							<div class="card">
-								<div class="info">
 									<h4 class="title">Contract Frontend Developer, Sijal in Stiches LLP</h4>
 									<p>April 2021 - March 2022</p>
 								</div>
@@ -411,9 +405,9 @@
 
 					<p class="connections">
 						Let's Connect: <span class="underline-gradient-link"><a class="link"
-								href="https://www.linkedin.com/in/poojaagarwal21/">Linkedin</a></span>
+								href="https://www.linkedin.com/in/poojaagarwal21/" target="_blank">Linkedin</a></span>
 						/ <span class="underline-gradient-link"><a class="link"
-								href="https://github.com/apooja21">Github</a></span>
+								href="https://github.com/apooja21" target="_blank">Github</a></span>
 					</p>
 				</div>
 			</div>
