--- a/index.html
+++ b/index.html
@@ -416,6 +416,7 @@
 	<!-- <footer></footer> -->
 
 	<div class="gradient-container"></div>
+	<!-- <span>Pooja Agarwal</span> -->
 
 	<!-- ===================JS Script===================== -->
 	<script src="assets/scripts/script.js"></script>
