changed email id

--- a/index.html
+++ b/index.html
@@ -399,8 +399,8 @@
 					</p>
 
 					<p class="email">
-						Email: <span class="underline-gradient-link"><a href="mailto:poojaagarwal367@gmail.com"
-								class="link">poojaagarwal367@gmail.com</a></span>
+						Email: <span class="underline-gradient-link"><a href="mailto:apooja.dev21@gmail.com"
+								class="link">apooja.dev21@gmail.com</a></span>
 					</p>
 
 					<p class="connections">
