--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<!-- =================================================================== -->
 	<link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
 
-	<title>APooja</title>
+	<title>Pooja Agarwal</title>
 	<link rel="stylesheet" href="../assets/css/styles.css" />
 </head>
 
