--- a/index.html
+++ b/index.html
@@ -282,6 +282,12 @@
 						<div class="outer">
 							<div class="card">
 								<div class="info">
+									<h4 class="title">Software Engineer -Frontend, Deutsche Telekom Digital Labs Pvt Ltd</h4>
+									<p>January 2025 - Present</p>
+								</div>
+							</div>
+							<div class="card">
+								<div class="info">
 									<h4 class="title">Contract Frontend Developer, Sijal in Stiches LLP</h4>
 									<p>April 2021 - March 2022</p>
 								</div>
@@ -327,12 +333,7 @@
 						</div>
 					</div>
 					<div class="cards">
-						<span class="project_img"  alt="project1" style="background: url(&quot;assets/images/project3.png&quot;);
-	background-size: 600px;
-	background-repeat: no-repeat;
-	background-color: #fff;
-	background-position: 0px 22px;
-	width: 440px;"></span>
+						<img class="project_img"  alt="project1" src="assets/images/project3.png"></img>
 						<div class="project_details">
 							<h2 class="project_name">Workout Buddy</h2>
 							<h4 class="project_tech">Client: React, useContext, TailwindCSS
