--- a/index.html
+++ b/index.html
@@ -271,8 +271,27 @@
 											src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tailwindcss/tailwindcss-original.svg" />
 									</div>TailwindCSS
 								</li>
+								<li>
+									<div class="skill_img">
+            							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/spring/spring-original.svg" />
+									</div>Spring Boot
+								</li>
+								<li>
+									<div class="skill_img">				           
+            							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/gitlab/gitlab-original.svg" />
+									</div>Gitlab
+								</li>
+								<li>
+									<div class="skill_img"> 				            
+            							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/materialui/materialui-original.svg" />
+									</div>Material UI
+								</li>
+								<li>
+									<div class="skill_img"> 				            				
+            							<img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/amazonwebservices/amazonwebservices-original-wordmark.svg" />
+									</div>AWS
+								</li>
 							</ul>
-
 						</div>
 					</div>
 
@@ -282,8 +301,14 @@
 						<div class="outer">
 							<div class="card">
 								<div class="info">
-									<h4 class="title">Software Engineer -Frontend, Deutsche Telekom Digital Labs Pvt Ltd</h4>
+									<h4 class="title">Fullstack Developer, Deutsche Telekom Digital Labs Pvt Ltd</h4>
 									<p>January 2025 - Present</p>
+								</div>
+							</div>
+							<div class="card">
+								<div class="info">
+									<h4 class="title">Frontend Developer, Airwebs Business Solutions</h4>
+									<p>April 2022 - December 2024</p>
 								</div>
 							</div>
 							<div class="card">
