--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 	</header>
 
 
-	<main>
+	ṁ<main>
 		<!-- ===================================HOME SECTION=========================== -->
 
 		<section class="home_section full_page" id="home">
